fixed spacing for tabs and accordion when inside callout

--- a/droplets/css/droplets.scss
+++ b/droplets/css/droplets.scss
@@ -1,7 +1,7 @@
 /*!
  * DROPLETS
  * @version: 3.2.0
- * @updated on: 10-20-2021
+ * @updated on: 11-02-2021
  * @author: Ethan Lin
  * @url: https://github.com/oel-mediateam/droplets-v3
  * @license: The MIT License (MIT)
@@ -750,7 +750,7 @@ Droplets page container. Droplets classes only work inside this container.
     
     	}
         
-        p {
+        > p {
 
             margin-top: 0;
 
